Add test for metrics